# vmm

./: .gitignore  README.md  pyproject.toml
src/vmm/: main.py
src/vmm/configs/: config.py  data_config.yaml  model_config.yaml
src/vmm/data/: dataloader.py  preprocess.py
src/vmm/models/: independent.py
